force-app/main/default/objects/Judgment_product_codes_mapping__c/Judgment_product_codes_mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Codes Mapping for Judgment to update product placement status</description>
    <label>Judgment to product codes mapping</label>
</CustomObject>