force-app/main/default/objects/Judgment_product_codes_mapping__c/fields/Codes__c.field-meta.xml
<CustomField>
    <fullName>Codes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>