force-app/main/default/objects/Judgment_product_codes_mapping__c/fields/Judgment_Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Legal_Status__c</fullName>
    <description>Judgment Legal Status</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Judgment Legal Status</inlineHelpText>
    <label>Judgment Legal Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>