force-app/main/default/objects/Judgment_product_codes_mapping__c/fields/Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>