force-app/main/default/objects/Judgment_product_codes_mapping__c/fields/Product_Sub_status__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Sub status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>