force-app/main/default/objects/Judgment_product_codes_mapping__c/fields/Settlement_Status__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Status__c</fullName>
    <description>Settlement status field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Settlement Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>